# zenmux-adapter

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  README_zh.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: lib.rs  main.rs
