[package]
name = "zenmux-adapter"
version = "0.1.0"
edition = "2024"
authors = ["Zhou Yeheng <root@aitiotekt.com>"]
description = "Adapter ZenMux to many AI tools"
license = "MIT"
repository = "https://github.com/aitiotekt/zenmux-adapter"
keywords = ["zenmux", "adapter", "openclaw", "ai", "llm"]
categories = ["development-tools::cli"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
inquire = "0.9"
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "json",
    "rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
